<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_rate_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/rate_app"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_more_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/more_app"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/share_app"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_like_fb_fanpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/like_facebook_fanpage"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_18" />

            <Button
                android:id="@+id/bt_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/support_24_7"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="@dimen/txt_18" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>